# projektNLP

./: README.md  character_generator.py  dashboard.py  data_parser.py  main.py  nlp_pipeline.py  pyproject.toml  requirements.txt
assets/: style.css
data/: character_arcs.csv  character_similarity.csv  dialogues.json  embeddings.npy  full_analysis.csv  ner_results.json  sentiment_results.csv  speech_style.csv  topic_coherence_cv.json  topic_evaluation.json  topic_info.csv  topic_motifs.json  topic_timeline.csv  topic_words.json
