[project]
name = "projektnlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.4",
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "hdbscan>=0.8.42",
    "numpy>=2.4.4",
    "openai>=2.34.0",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "spacy>=3.8.14",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "umap-learn>=0.5.12",
]
